[Update] Added tinyobj lib for obj parsing

--- a/Outliner/Outliner.vcxproj.filters
+++ b/Outliner/Outliner.vcxproj.filters
@@ -61,5 +61,8 @@
     <ClInclude Include="stb_truetype.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="tinyobj.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
