--- a/Outliner/Outliner.vcxproj.filters
+++ b/Outliner/Outliner.vcxproj.filters
@@ -13,22 +13,28 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Header Files\3rdparty">
+      <UniqueIdentifier>{7f7603f4-bf06-4250-ad29-86625acca9cb}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\3rdparty">
+      <UniqueIdentifier>{2bd8698b-3f06-4c72-bfbc-4d2aae0c602e}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="OutlineMain.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="imgui_impl_dx11.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="imgui.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\3rdparty</Filter>
     </ClCompile>
     <ClCompile Include="imgui_demo.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\3rdparty</Filter>
     </ClCompile>
     <ClCompile Include="imgui_draw.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\3rdparty</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui_impl_dx11.cpp">
+      <Filter>Source Files\3rdparty</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -40,28 +46,31 @@
     </FxCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="imgui_impl_dx11.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="imconfig.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\3rdparty</Filter>
     </ClInclude>
     <ClInclude Include="imgui.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\3rdparty</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui_impl_dx11.hpp">
+      <Filter>Header Files\3rdparty</Filter>
     </ClInclude>
     <ClInclude Include="imgui_internal.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\3rdparty</Filter>
     </ClInclude>
     <ClInclude Include="stb_rect_pack.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\3rdparty</Filter>
     </ClInclude>
     <ClInclude Include="stb_textedit.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\3rdparty</Filter>
     </ClInclude>
     <ClInclude Include="stb_truetype.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\3rdparty</Filter>
     </ClInclude>
     <ClInclude Include="tinyobj.hpp">
+      <Filter>Header Files\3rdparty</Filter>
+    </ClInclude>
+    <ClInclude Include="LogWindow.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
