--- a/Outliner/Outliner.vcxproj
+++ b/Outliner/Outliner.vcxproj
@@ -166,6 +166,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="clipper.hpp" />
+    <ClInclude Include="Hull.hpp" />
     <ClInclude Include="imconfig.h" />
     <ClInclude Include="imgui.h" />
     <ClInclude Include="imgui_impl_dx11.hpp" />
