--- a/Outliner/Outliner.vcxproj.filters
+++ b/Outliner/Outliner.vcxproj.filters
@@ -39,12 +39,18 @@
     <ClCompile Include="clipper.cpp">
       <Filter>Source Files\3rdparty</Filter>
     </ClCompile>
+    <ClCompile Include="Outliner.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="VertexShader.hlsl">
       <Filter>Resource Files</Filter>
     </FxCompile>
     <FxCompile Include="PixelShader.hlsl">
+      <Filter>Resource Files</Filter>
+    </FxCompile>
+    <FxCompile Include="GeometryShader.hlsl">
       <Filter>Resource Files</Filter>
     </FxCompile>
   </ItemGroup>
@@ -70,9 +76,6 @@
     <ClInclude Include="stb_truetype.h">
       <Filter>Header Files\3rdparty</Filter>
     </ClInclude>
-    <ClInclude Include="tinyobj.hpp">
-      <Filter>Header Files\3rdparty</Filter>
-    </ClInclude>
     <ClInclude Include="LogWindow.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -81,6 +84,15 @@
     </ClInclude>
     <ClInclude Include="Hull.hpp">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Mesh.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Outliner.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="tiny_obj_loader.h">
+      <Filter>Header Files\3rdparty</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
