[Refactor] Refactored camera and math helpers in their respective files

--- a/Outliner/Outliner.vcxproj
+++ b/Outliner/Outliner.vcxproj
@@ -41,7 +41,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v140</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
@@ -176,12 +176,14 @@
     </FxCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Camera.hpp" />
     <ClInclude Include="clipper.hpp" />
     <ClInclude Include="imconfig.h" />
     <ClInclude Include="imgui.h" />
     <ClInclude Include="imgui_impl_dx11.hpp" />
     <ClInclude Include="imgui_internal.h" />
     <ClInclude Include="LogWindow.hpp" />
+    <ClInclude Include="MathExtension.hpp" />
     <ClInclude Include="Mesh.hpp" />
     <ClInclude Include="Outliner.hpp" />
     <ClInclude Include="stb_rect_pack.h" />
